# hotel-bot-deepeval-eval-harness

./: Makefile  README.md  REPORT.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: live-eval.yml  live-fixed-regression.yml  test.yml
data/: goldens.jsonl  goldens_synth.jsonl  goldens_synth_10k.jsonl  judge_validation_set.jsonl  synthesize.py  system_prompt.bilingual.txt  system_prompt.regression.txt  system_prompt.txt
docs/: 2026-06-12-analysis-and-improvement-plan.md  kyrgyz-language-bug.md
docs/superpowers/plans/: 2026-06-12-p0-correctness-trust-hygiene.md
evals/: regression_check.py  run_suite.py  test_booking.py  test_factual.py  test_language.py  test_quality.py  test_safety.py
golden/: loader.py
judge/: deepseek_judge.py
meta/: aggregate.py  cost.py  gate.py  grounding_failures.py  judge_validation.py  stats.py
metrics/: language_fidelity.py  payment_leak.py  slot_extraction.py
reports/: suite_report_synth.json  suite_report_synth.md  suite_report_synth10k.json  suite_report_synth10k.md  suite_report_synth_fixed.json  suite_report_synth_fixed.md  suite_report_synth_fixed_bilingual.json  suite_report_synth_fixed_bilingual.md
sut/: bot_runner.py  prompt.py
sut/hotel_bot/: bot.py  bot_fixed.py  db.py
tests/: test_aggregate.py  test_bot_runner.py  test_cost.py  test_gate.py  test_golden_loader.py  test_grounding_failures.py  test_judge_retry.py  test_judge_validation.py  test_language_fidelity.py  test_payment_leak.py  test_regression.py  test_run_suite.py  test_schema_sync.py  test_slot_extraction.py  test_stats.py  test_synthesize.py  test_system_prompt.py
