[project]
name = "hotel-bot-eval-deepeval"
version = "0.1.0"
description = "DeepEval evaluation harness for a bilingual (RU/KY) hotel WhatsApp bot, with a DeepSeek LLM-as-judge validated by Cohen's kappa."
requires-python = ">=3.13"
dependencies = [
    # deepeval 4.x pulls httpx>=0.28; openai>=1.55.3 is required so the OpenAI client
    # does not pass the removed `proxies` kwarg into httpx 0.28 (TypeError otherwise).
    "deepeval==4.0.5",
    "openai==2.41.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "pytest==8.2.0",
    "pytest-mock==3.14.0",
]

[tool.uv]
# This is an application run via module imports (sut/, evals/, meta/...), not an
# installable package, so don't try to build/install the project itself.
package = false
