[project]
name = "hotel-bot-eval-deepeval"
version = "0.1.0"
description = "DeepEval evaluation harness for a bilingual (RU/KY) hotel WhatsApp bot, with a DeepSeek LLM-as-judge validated by Cohen's kappa."
requires-python = ">=3.13"
dependencies = [
    # deepeval 4.x pulls httpx>=0.28; openai>=1.55.3 is required so the OpenAI client
    # does not pass the removed `proxies` kwarg into httpx 0.28 (TypeError otherwise).
    "deepeval==4.0.5",
    "langdetect>=1.0.9",
    "openai==2.41.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pytest==8.2.0",
    "pytest-mock==3.14.0",
    "ruff>=0.8.0",
]

[tool.uv]
# This is an application run via module imports (sut/, evals/, meta/...), not an
# installable package, so don't try to build/install the project itself.
package = false

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
# sut/hotel_bot/ is vendored bot code under evaluation — don't lint-edit it.
"sut/hotel_bot/*" = ["E501"]

[tool.mypy]
# Gradual baseline, not strict: the gate is "mypy passes", not full coverage.
python_version = "3.13"
# deepeval and langdetect ship without type stubs.
ignore_missing_imports = true
# Vendored bot code under evaluation is not type-checked or edited.
exclude = ["sut/hotel_bot/", "venv/", "\\.venv"]

[[tool.mypy.overrides]]
# exclude only stops directory discovery; these modules are still followed via
# imports from the harness, so silence their errors explicitly too.
module = "sut.hotel_bot.*"
ignore_errors = true
